# 2d-noise-image-generator

./: .gitignore  CMakeLists.txt  README.md
src/: args.cpp  args.h  colormap.cpp  colormap.h  main.cpp  util.h
